--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h2>Particulars</h2>
                     <div id="particulars-container"></div>
                     <button type="button" onclick="addParticularRow()" class="btn-secondary mt-4">Add Particular</button>
-                    <div id="total-amount">Total Amount: ₹0</div>
+                    <div id="total-amount">Total Amount: Rs.0</div>
                 </div>
 
                 <button type="button" onclick="generatePDF()" class="btn-primary mt-6 w-full">Generate PDF</button>
@@ -131,7 +131,7 @@
                 <input type="text" placeholder="Particular (e.g., CCTV, Biometrics)" class="input-field" required>
                 <input type="number" placeholder="Maintenance Visits" min="0" class="input-field" required>
                 <input type="number" placeholder="Breakdown Visits" min="0" class="input-field" required>
-                <input type="number" placeholder="Amount (₹)" min="0" step="0.01" class="input-field" required>
+                <input type="number" placeholder="Amount (Rs.)" min="0" step="0.01" class="input-field" required>
                 <button type="button" onclick="this.parentNode.remove(); updateTotalAmount()" class="btn-secondary">Remove</button>
             `;
             container.appendChild(row);
@@ -144,12 +144,12 @@
             const rows = document.querySelectorAll('.particular-row');
             let total = 0;
             rows.forEach(row => {
-                const amountInput = row.querySelector('input[placeholder="Amount (₹)"]');
+                const amountInput = row.querySelector('input[placeholder="Amount (Rs.)"]');
                 if (amountInput && amountInput.value) {
                     total += parseFloat(amountInput.value) || 0;
                 }
             });
-            document.getElementById('total-amount').textContent = `Total Amount: ₹${total.toFixed(2)}`;
+            document.getElementById('total-amount').textContent = `Total Amount: Rs.${total.toFixed(2)}`;
         }
 
         function generatePDF() {
@@ -223,7 +223,7 @@
                         inputs[0].value,
                         inputs[1].value,
                         inputs[2].value,
-                        `₹${amount.toFixed(2)}`
+                        `Rs.${amount.toFixed(2)}`
                     ]);
                 }
             });
@@ -235,8 +235,8 @@
                 doc.line(20, 157, 50, 157);
                 doc.autoTable({
                     startY: 165,
-                    head: [['Item', 'Maintenance Visits', 'Breakdown Visits', 'Amount (₹)']],
-                    body: [...particulars, ['', '', 'Total:', `₹${totalAmount.toFixed(2)}`]],
+                    head: [['Item', 'Maintenance Visits', 'Breakdown Visits', 'Amount (Rs.)']],
+                    body: [...particulars, ['', '', 'Total:', `Rs.${totalAmount.toFixed(2)}`]],
                     theme: 'grid',
                     styles: { fontSize: 10, cellPadding: 4, textColor: [55, 65, 81] },
                     headStyles: { fillColor: [37, 99, 235], textColor: [255, 255, 255], fontStyle: 'bold' },
