--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             doc.line(20, 35, 190, 35);
             doc.setFontSize(10);
             doc.setTextColor(107, 114, 128); // Gray-500
-            doc.text('123 Security Lane, Tech City, India | support@eyetechsecurities.com | +91-XXX-XXX-XXXX', 105, 40, { align: 'center' });
+            doc.text('No.56/80, Medavakkam Main Road, Keelkattali, Chennai-600117. | support@eyetechsecurities.com | +919962835944', 105, 40, { align: 'center' });
 
             // AMC Number and Date
             const today = new Date();
@@ -298,7 +298,7 @@
                     doc.line(20, 35, 190, 35);
                     doc.setFontSize(10);
                     doc.setTextColor(107, 114, 128);
-                    doc.text('123 Security Lane, Tech City, India | support@eyetechsecurities.com | +91-XXX-XXX-XXXX', 105, 40, { align: 'center' });
+                    doc.text('No.56/80, Medavakkam Main Road, Keelkattalai, Chennai-600117. | support@eyetechsecurities.com | +919962835944', 105, 40, { align: 'center' });
                 }
                 doc.text(lines, 20, currentY);
                 currentY += lines.length * 8;
@@ -320,7 +320,7 @@
                 doc.line(20, 35, 190, 35);
                 doc.setFontSize(10);
                 doc.setTextColor(107, 114, 128);
-                doc.text('123 Security Lane, Tech City, India | support@eyetechsecurities.com | +91-XXX-XXX-XXXX', 105, 40, { align: 'center' });
+                doc.text('No.56/80, Medavakkam Main Road, Keelkattalai, Chennai-600117. | support@eyetechsecurities.com | +919962835944', 105, 40, { align: 'center' });
             }
             doc.setFontSize(12);
             doc.text('Customer Signature: _______________________', 20, currentY);
